--- a/ply.html
+++ b/ply.html
@@ -3,12 +3,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="robots" content="noindex, nofollow" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="https://iili.io/Jl3Q56g.webp" type="image/x-icon">
   <link rel="apple-touch-icon" href="https://iili.io/Jl3Q56g.webp">
-  <link rel="canonical" href="https://zazerconer.github.io/live-tv-malaysia-with-player">
-  <title>LIVE TV MALAYSIA | Web Player</title>
+  <link rel="canonical" href="https://jestation.github.io/ply">
+  <title>LIVE TV | Web Player</title>
   
   <link rel="stylesheet" href="src/style.css">
 
